# health-agent

./: .gitignore  .vercelignore  LICENSE  README.md  brain_of_the_doctor.py  package.json  pyproject.toml  requirements.txt  server.py  vercel.json  voice_of_doctor.py  voice_of_patient.py
api/: index.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
